--- a/public/link.css
+++ b/public/link.css
@@ -110,7 +110,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: blur(2px) brightness(0.5);
+    filter: contrast(1.2) brightness(0.5);
 }
 
 @media screen and (prefers-color-scheme: light) {
@@ -120,7 +120,7 @@
     }
 
     .link > .link--backdrop > img {
-        filter: blur(1px) contrast(0.55) brightness(1.4);
+        filter: contrast(0.55) brightness(1.4);
     }
 }
 
@@ -139,15 +139,24 @@ a:hover > .link {
 
 .link::after {
     content: attr(data-feed-number);
-    font-size: 11rem;
-    font-weight: bold;
+    font-size: 7rem;
+    font-weight: 1000;
     font-style: italic;
     display: block;
     position: absolute;
-    bottom: -70px;
-    right: 0;
+    bottom: -43px;
+    left: -20px;
     color: var(--accent);
-    opacity: 0.05;
+    z-index: -1;
+    mix-blend-mode: color-dodge;
+    opacity: 0.3;
+}
+
+@media (prefers-color-scheme: light) {
+    .link::after {
+        mix-blend-mode: darken;
+        opacity: 0.2;
+    }
 }
 
 .link--presence {
@@ -633,10 +642,6 @@ turbo-frame#pornsearch_results .results form button {
         max-height: 60px;
         opacity: 1;
     }
-}
-
-.accent-block--link {
-    padding: 40px 1.5rem 1.5rem;
 }
 
 .accent-block > .link {
