Discord link, notice about charing for premium

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
 <header>
   <div class="header__age-warning">
     🔞 This is an app for adults over the age of 18 only.<br/>
-    Requests? Bugs? <a href="https://discord.gg/waaHCqUXj6" target="_blank">Gios made us a discord!</a>
+    ⚠️ I'm considering charging for a paid tier to offset costs. Give your thoughts on Discord! ⚠️<br/>
+    Requests? Bugs? <a href="https://discord.gg/s4z9GfwuKw" target="_blank">Gios made us a discord!</a>
   </div>
   <div class="header__inner">
     <h1><a href="/">
