Added filter for online only in search

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -7,8 +7,12 @@
 <h1 class="woogle">Woogle</h1>
 
 <%= form_with url: results_url, method: 'get', class: 'link-search', data: { 'turbo-frame': :link_search_results } do |f| %>
-  <%= f.text_field :q  %>
+  <%= f.text_field :q %>
   <%= f.submit 'Search Links', name: nil %>
+  <%= f.label :only_online do %>
+    <strong class="online">Online</strong> Only
+    <%= f.check_box :only_online %>
+  <% end %>
 <% end %>
 
 <%= turbo_frame_tag :link_search_results do %>
@@ -18,7 +22,9 @@
       Tip
     </div>
     <p>
-      Woogle searches for links, but will look at the user's bio and username as well. <strong>This means you may see links that don't seem to contain your search term.</strong> This just means the word appeared in their user profile.
+      Woogle searches for links, but will look at the user's bio and username as well.
+      <strong>This means you may see links that don't seem to contain your search term.</strong> This just means the
+      word appeared in their user profile.
     </p>
   </div>
 <% end %>
