New arson automate client

--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -6,6 +6,7 @@
   android: :mobile,
   joihow: :desktop,
   automate: :mobile,
+  arson_automate: :mobile,
   wallpaper_engine: :desktop,
   ioswidget: :mobile,
   swift: :desktop,
