--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -134,6 +134,9 @@
           <svg height="28" width="28">
             <use xlink:href="/icon-automate.svg#Calque_1"></use>
           </svg>
+        <% when :arson_automate %>
+          <span>Arson's Client</span>
+          <ion-icon role="presentation" name="bonfire"></ion-icon>
         <% when :wallpaper_engine %>
           <span>Lycaon's Wallpaper Engine</span>
           <ion-icon role="presentation" name="cog"></ion-icon>
