Oops, missed link to arson's client on the homepage

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -138,6 +138,10 @@
     (<a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a>)
   </li>
   <li>
+    <a href="https://llamalab.com/automate/community/flows/46470" target="_blank">Arson's Automate Client</a>
+    (<a href="https://llamalab.com/automate/">Automate App for Android</a>)
+  </li>
+  <li>
     <a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a>
     (<a href="https://llamalab.com/automate/">Automate App for Android</a>)
   </li>
