Small explainer graphic on dashboard + why was the ruby-version rvm thing stuck at 3.1.0?

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -116,6 +116,8 @@
   account. Enter your username, and then go about your day!
 </p>
 
+<%= inline_svg_tag "wt.svg", class: "explainer_graphic", aria: true, title: "A flow chart, showing links pushing updates to devices running walltaker clients.", width: '100%', height: 'auto' %>
+
 <h2 id="companion-apps">Clients</h2>
 <ul>
   <li>
