--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -224,3 +224,8 @@ turbo-frame#users_viewing_links {
 turbo-frame#users_viewing_links strong {
     color: var(--border);
 }
+
+.explainer_graphic {
+    padding: 2rem 0 0;
+    color: var(--text);
+}
