More powerful password reset mod tool, you can search tiny strings

--- a/app/views/mod_tools/_password_reset_form.erb
+++ b/app/views/mod_tools/_password_reset_form.erb
@@ -8,7 +8,7 @@
   <% if params['fail'] || params['link'] %>
     <div class="mod_tool__result mod_tool__result--<%= params['fail'] ? 'fail' : 'success' %>">
       <% if params['fail'] %>
-        <ion-icon name="close-circle" class="big"></ion-icon> <%= params['fail'] %>
+        <ion-icon name="close-circle" class="big"></ion-icon> <%= params['fail'] %><br/>
       <% end %>
 
       <% if params['link'] %>
