--- a/app/views/mod_tools/index.html.erb
+++ b/app/views/mod_tools/index.html.erb
@@ -38,12 +38,14 @@
 <section>
   <h3>Authentication Issues</h3>
   <%= button_to "They forgot their password", mod_tools_passwords_index_path, method: :get %>
-  <%= button_to "They can't log in but know their password", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
+<!--
+  <%#= button_to "They can't log in but know their password", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
+-->
 </section>
 
-<section>
+<!--<section>
   <h3>Moderation</h3>
-  <%= button_to "I need to ban a user with an account", mod_tools_passwords_index_path, method: :get %>
-  <%= button_to "I suspect a user is sending bad messages", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
-  <%= button_to "I need to ban an anon IP address", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
-</section>
+  <%#= button_to "I need to ban a user with an account", mod_tools_passwords_index_path, method: :get %>
+  <%#= button_to "I suspect a user is sending bad messages", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
+  <%#= button_to "I need to ban an anon IP address", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
+</section>-->
