--- a/app/views/mod_tools/show_password_reset.html.erb
+++ b/app/views/mod_tools/show_password_reset.html.erb
@@ -12,7 +12,7 @@
 
 <h3>Step 1: Get proof</h3>
 <p>
-  Ask something like the following: <strong>"Can you give me all or part of the email you used to make the account? I only need this to confirm this is really you."</strong> A partial email is alright, as long as it contains something on the left side of the @ symbol. If they say "it was a gmail.com address", this does not count.
+  Ask something like the following: <strong>"Can you give me all or part of the email you used to make the account? I only need it to confirm this is your account."</strong> A partial email is alright, as long as it contains something on the left side of the @ symbol. Make sure they at least give you most of it though, single words might be guessable. If they say "it was a gmail.com address", this does not count.
 </p>
 
 <div class="accent-block accent-block--warning spaced">
