Added to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,6 +88,10 @@
         <ion-icon role="presentation" name="stats-chart"></ion-icon>
         Stats
       <% end %>
+      <%= link_to mod_tools_index_path do %>
+        <ion-icon role="presentation" name="nuclear"></ion-icon>
+        Mod Tools
+      <% end %>
     <% end %>
   </small>
 </footer>
