--- a/app/views/mod_tools/index.html.erb
+++ b/app/views/mod_tools/index.html.erb
@@ -49,3 +49,4 @@
   <%#= button_to "I suspect a user is sending bad messages", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
   <%#= button_to "I need to ban an anon IP address", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
 </section>-->
+More to come
