--- a/app/views/mod_tools/index.html.erb
+++ b/app/views/mod_tools/index.html.erb
@@ -36,11 +36,9 @@
 </h2>
 
 <section>
-  <h3>Authentication Issues</h3>
+  <h3>Account issues</h3>
   <%= button_to "They forgot their password", mod_tools_passwords_index_path, method: :get %>
-<!--
-  <%#= button_to "They can't log in but know their password", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
--->
+  <%= button_to "Edit a user", mod_tools_users_index_path, method: :get, class: 'secondary' %>
 </section>
 
 <!--<section>
